# amplifier-research-specialist

./: .gitignore  CONTRIBUTING.md  README.md  bundle.md
.amplifier/: settings.yaml
agents/: competitive-analysis.md  data-analyzer-formatter.md  data-analyzer.md  planner.md  presentation-builder.md  prioritizer-formatter.md  prioritizer.md  researcher-formatter.md  researcher.md  storyteller.md  writer-formatter.md  writer.md
behaviors/: specialists.yaml
context/: coordinator-routing.md  researcher-instructions.md  session-startup.md  specialists-instructions.md
docs/: BACKLOG.md  PR-FAQ.md  README.md  SCORECARD.md  USING-SPECIALISTS.md  adding-a-specialist.md  how-do-you-know-session-story.html  readme-audit-2026-03-15.md
modules/hook-specialist-narration/: pyproject.toml
modules/hook-specialist-narration/amplifier_module_hook_specialist_narration/: __init__.py
modules/tool-canvas-renderer/: pyproject.toml
modules/tool-canvas-renderer/amplifier_module_tool_canvas_renderer/: __init__.py
modules/tool-canvas-renderer/tool_canvas_renderer/: __init__.py
recipes/: capture-feedback.yaml  competitive-analysis-brief-researched.yaml  competitive-analysis-brief.yaml  eval-batch.yaml  eval-critics-only.yaml  eval-harness.yaml  mine-test-logs.yaml  narrative-chain.yaml  promote-mining-items.yaml  quality-eval-iteration.yaml  quality-eval.yaml  quality-loop.yaml  research-chain.yaml  subagent-driven-development.phase1-fastload-v4.yaml
scripts/: smoke-test.sh
tests/: analyze-and-improve.yaml  conftest.py  improvement-loop.sh  test_backlog_epic03_status.py  (+36 more)
(+205 files in other folders)
