[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hook-specialist-narration"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
hook-specialist-narration = "amplifier_module_hook_specialist_narration:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hook_specialist_narration"]
