[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-canvas-renderer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
tool-canvas-renderer = "amplifier_module_tool_canvas_renderer:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_canvas_renderer"]
